# pong-chatgpt

./: CMakeLists.txt  README.md
src/: main.cpp
src/engine/: engine.cpp  engine.hpp
src/entity/: ball.cpp  ball.hpp  enemy.cpp  enemy.hpp  paddle.cpp  paddle.hpp  player.cpp  player.hpp
src/primitives/: color.cpp  color.hpp  size2d.hpp  vector2d.hpp
src/timer/: timer.cpp  timer.hpp
